# Degoogled-Android-Auto

./: CHANGELOG.md  CMakeLists.txt  FEATURES.md  NISSAN_PATHFINDER_COMPATIBILITY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_SUMMARY.md  VEHICLE_COMPATIBILITY.md  degoogled-android-auto-v1.0.0.apk.idsig  degoogled-android-auto.keystore  local.properties
.github/workflows/: ci.yml
app/: build.gradle  proguard-rules.pro  signing.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/degoogled/androidauto/: MainActivity.java  MainActivity.java.backup  MainActivity.kt  SimpleMainActivity.java
app/src/main/java/com/degoogled/androidauto/apps/: OsmAndIntegration.java  VLCIntegration.java
app/src/main/java/com/degoogled/androidauto/integration/: OsmAndIntegration.java
app/src/main/java/com/degoogled/androidauto/logging/: ConnectionLogger.java
app/src/main/java/com/degoogled/androidauto/protocol/: AndroidAutoProtocol.java  ProtocolHandler.java  UsbConnection.java
app/src/main/java/com/degoogled/androidauto/service/: MediaService.java  NavigationService.java  ProtocolHandlerService.java  ProtocolHandlerServiceEnhanced.java
app/src/main/res/layout/: activity_main.xml  activity_test.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: app_integration_guide.md  contributor_guide.md  hud-interface-mockup.html  integration_api.md  performance_optimization_guide.md  phone-interface-mockup.html  protocol_handler_guide.md  release_preparation.md  security_audit.md  security_guide.md  user_guide.md  user_onboarding.md  voice_command_guide.md
keystore/: release.keystore
src/protocol_handler/app/: IMessagingApp.hpp  K9MailMessagingApp.cpp  K9MailMessagingApp.hpp
src/protocol_handler/common/: Error.hpp  Log.hpp  Promise.hpp
temp_disabled/: MainActivity.java  TestActivity.java
temp_disabled/integration/: VlcIntegration.java
temp_disabled/protocol/: ProtocolSession.java  UsbConnection.java
temp_disabled/protocol/messages/: Message.java
temp_disabled/protocol/messages/auth/: AuthCompleteRequest.java  AuthStartRequest.java
temp_disabled/protocol/messages/control/: ControlVersionRequest.java  ControlVersionResponse.java
temp_disabled/protocol/messages/media/: MediaPlaybackControl.java  MediaSetupRequest.java  MediaSetupResponse.java
temp_disabled/protocol/messages/nav/: NavSetupRequest.java  NavStartRequest.java  NavStartResponse.java
temp_disabled/service/: MediaService.java  ProtocolHandlerService.java
(+18 files in other folders)
